k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: accounts-service
spec:
  type: NodePort
  selector:
    app: accounts
  ports:
    - port: 80
      targetPort: 9000
      nodePort: 30080
