k3s/postgres.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: accounts-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: accounts.local    # заменишь на свой домен
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: accounts-service
            port:
              number: 80
